--- a/tex/2019/3/6-diag1.tex
+++ b/tex/2019/3/6-diag1.tex
@@ -1,7 +1,7 @@
-\begin{tikzpicture}[scale=2]
+\begin{tikzpicture}
     \draw[->] ({-sqrt(2) - 0.5}, 0) -- ({sqrt(2) + 0.5}, 0) node[right] {\(\re(z)\)};
     \draw[->] (0, {1 - sqrt(2) - 0.5}) -- (0, {1 + sqrt(2) + 0.5}) node[above] {\(\im(z)\)};
-    \node at (0, 0) [below left] {\(O\)};
+    \node at (0, 0) [above left] {\(O\)};
     \draw (0, 1) circle ({sqrt(2)});
-    \filldraw (0, 1) circle (0.3pt) node[left] {\(a\)};
+    \filldraw (0, 1) circle (0.5pt) node[left] {\(a\)};
 \end{tikzpicture}
