--- a/tex/2019/3/6-diag2.tex
+++ b/tex/2019/3/6-diag2.tex
@@ -1,7 +1,6 @@
-\begin{tikzpicture}[scale=2]
-    \draw[->] ({2 - sqrt(3) - 0.5}, 0) -- ({2 + sqrt(3) + 0.5}, 0) node[right] {\(\re(z)\)};
-    \draw[->] (0, {-sqrt(3) - 0.5}) -- (0, {sqrt(3) + 0.5}) node[above] {\(\im(z)\)};
-    \node at (0, 0) [below left] {\(O\)};
-    \draw (2, 0) circle ({sqrt(3)});
-    \filldraw (2, 0) circle (0.3pt) node[below] {\(a\)};
+\begin{tikzpicture}
+    \draw[->] (-1.5, 0) -- (1.5, 0) node[right] {\(\re(z)\)};
+    \draw[->] (0, -1.5) -- (0, 1.5) node[above] {\(\im(z)\)};
+    \filldraw (0, 0) circle (0.5pt) node [below left] {\(O\)} node [below right] {\(a\)};
+    \draw (0, 0) circle (1);
 \end{tikzpicture}
